# termbox

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  Makefile  NOTES  README  README.md  README.rst  WHEREWHAT  autogen.sh  checkterm.py  checkterms.sh  collectkeys.py  compile.sh  configure.ac  input.c  keyboard.c  keyboard.cpp  package.json  ringbuffer.c  setup.py  term.c  term.h  term.inl  term.txt  termbox.c  termbox.h  termbox.hpp  terms  test.c  test_termboxmodule.py  utf8.c  waf  wscript
cmake/: add_cflag_if_supported.cmake
demo/: Makefile  output.c
go/: Make.pkg  Makefile  README  example.go  make_libtermbox.bash  structures.c  termbox.go
include/: CMakeLists.txt  termbox.h
py/: CMakeLists.txt  Makefile  termbox.pyx  test.py
src/: CMakeLists.txt  Makefile.am  bytebuffer.c  bytebuffer.h  bytebuffer.inl  input.c  input.inl  memstream.c  memstream.h  term.c  term.h  term.inl  termbox.c  termbox.h  termboxmodule.pyx  utf8.c  wscript
src/demo/: CMakeLists.txt  keyboard.c  output.c  paint.c  truecolor.c  wscript
src/python/: termboxmodule.pyx
tools/: checkterm.py  collect_terminfo.py  collectkeys.py
