SET(TERMBOX_LIB_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/input.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ringbuffer.c
    ${CMAKE_CURRENT_SOURCE_DIR}/term.c
    ${CMAKE_CURRENT_SOURCE_DIR}/termbox.c
    ${CMAKE_CURRENT_SOURCE_DIR}/utf8.c
    ${CMAKE_CURRENT_SOURCE_DIR}/memstream.c
)

ADD_LIBRARY(termbox STATIC ${TERMBOX_LIB_SRC})

OPTION(TERMBOX_SHARED "Build static library for use in shared libraries (uses fPIC)" OFF)

IF(TERMBOX_SHARED)
    SET_TARGET_PROPERTIES(termbox PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF(TERMBOX_SHARED)

ADD_SUBDIRECTORY(demo)
